changes to fix the footer at the bottom and let the content scroll up also on small scren widths

--- a/css/style.css
+++ b/css/style.css
@@ -205,25 +205,16 @@ transition: 0.5s opacity;
 	margin: 0 auto;
 	padding: 20px;
 	height:100%;
-}
-
-footer {
-	position: fixed;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	text-align: center;
-	background-color: var(--background-porcelain);
+	padding-bottom: 95px;
 }
 
 .page-footer {
-	/* clear: both; */
-	/* display: flex; */
-	/* flex-direction: column; */
-	/* justify-content: flex-end; */
-	/* padding: 10px; */
-	/* height: 90px; */
-	/* padding-bottom: 20px; */
+position: fixed;
+left: 0;
+bottom: 0;
+width: 100%;
+text-align: center;
+background-color: var(--background-porcelain);
 }
 
 .social-media img {
@@ -270,8 +261,6 @@ footer {
 }
 
 .work-content {
-	margin: 0 auto;
-	width: 100%;
 	text-align: center;
 }
 
@@ -345,7 +334,6 @@ footer {
 		grid-template-columns: 1fr 1fr 1fr;
 		grid-gap: 20px;
 		margin: 0;
-		float: left;
 	}
 	
 	.grid__item {
