--- a/css/style.production.css
+++ b/css/style.production.css
@@ -213,25 +213,16 @@ transition: 0.5s opacity;
 	margin: 0 auto;
 	padding: 20px;
 	height:100%;
-}
-
-footer {
-	position: fixed;
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	text-align: center;
-	background-color: #f5f8f8;
+	padding-bottom: 95px;
 }
 
 .page-footer {
-	/* clear: both; */
-	/* display: flex; */
-	/* flex-direction: column; */
-	/* justify-content: flex-end; */
-	/* padding: 10px; */
-	/* height: 90px; */
-	/* padding-bottom: 20px; */
+position: fixed;
+left: 0;
+bottom: 0;
+width: 100%;
+text-align: center;
+background-color: #f5f8f8;
 }
 
 .social-media img {
@@ -278,8 +269,6 @@ footer {
 }
 
 .work-content {
-	margin: 0 auto;
-	width: 100%;
 	text-align: center;
 }
 
@@ -403,7 +392,6 @@ footer {
 		grid-template-columns: 1fr 1fr 1fr;
 		grid-gap: 20px;
 		margin: 0;
-		float: left;
 	}
 	
 	.grid__item {
